A composition underline is placed to wrong position in RTL https://bugs.webkit.org/show_bug.cgi?id=158602

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2016-06-20
Reviewed by Myles C. Maxfield.

Source/WebCore:

InlineTextBox::paintCompositionUnderline does not take RTL into
account.  The position of composition underline should be
mirrored in RTL.

Test: editing/input/composition-underline-rtl.html

* rendering/InlineTextBox.cpp:
(WebCore::mirrorRTLSegment): New helper function to convert RTL start position to LTR.
(WebCore::InlineTextBox::paintDecoration): Use mirrorRTLSegment.
(WebCore::InlineTextBox::paintCompositionUnderline): Ditto.

LayoutTests:

* editing/input/composition-underline-rtl-expected.html: Added.
* editing/input/composition-underline-rtl.html: Added.

Canonical link: https://commits.webkit.org/177022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202250 268f45cc-cd09-0410-ab3c-d52691b4dbfc